# Statistical-Analysis-Program

./: CMakeLists.txt  Main.cpp  NormalTest.cpp  NormalTest.h  README.md  Test.cpp  Test.h  UniformTest.cpp  UniformTest.h
